fix scroll nav item selection

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Freelancer - CV and Portfolio Template</title>
     <meta name="description" content>
-    <meta name="viewport" content="width=device-width, initial-scale-1.0, user-scalable-no">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png"> -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -17,42 +17,6 @@
 </head>
 
 <body>
-
-    <!-- <div class="preloader">
-        <div class="loader">
-            <div class="ytp-spinner">
-                <div class="ytp-spinner-container">
-                    <div class="ytp-spinner-rotator">
-                        <div class="ytp-spinner-left">
-                            <div class="ytp-spinner-circle"></div>
-                        </div>
-                        <div class="ytp-spinner-right">
-                            <div class="ytp-spinner-circle"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
-    <!-- <div class="top_bar">
-        <div class="container">
-            <div class="top_bar_inner">
-                <div class="logo">
-                    <a href="#home">PORTFOLIO</a>
-                </div>
-                <div class="menu">
-                    <ul>
-                        <li class="current"><a href="#home">Accueil</a></li>
-                        <li><a href="#about">A propos</a></li>
-                        <li><a href="#projects">Projets</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
     <header class="header" id="header">
         <div class="nav_menu">
             <ul class="nav_list">
@@ -92,7 +56,7 @@
     </header>
 
 
-    <div class="home" id="home">
+    <div class="section home" id="home">
         <div class="ripple jquery-ripples" id="ripple">
             <!-- <canvas width="1098" height="754" style="position: absolute;inset: 0px;z-index: -1;"></canvas> -->
         </div>
@@ -168,40 +132,39 @@
         </div>
     </div>
 
-    <div class="section">
-        <div class="about" id="about">
-            <div class="container">
-                <div class="about_inner">
-                    <div class="left wow fadeInLeft">
 
-                        <div class="image parallax" data-relative-input="true"
-                            style="transform: translate3d(0px, 0px, 0px);transform-style: preserve-3d;backface-visibility: hidden;">
-                            <img src="https://marketifythemes.net/html/grax/img/placeholders/3-4.jpg" alt="">
-                            <div class="main layer" data-img-url="https://marketifythemes.net/html/grax/img/about/1.jpg"
-                                data-depth="0.04"
-                                style="background-image: url(&quot;https://marketifythemes.net/html/grax/img/about/1.jpg&quot;); transform: translate3d(-7.48963px, 2.94716px, 0px); transform-style: preserve-3d; backface-visibility: hidden; position: relative; display: block; left: 0px; top: 0px;">
-                            </div>
+    <div class="section about" id="about">
+        <div class="container">
+            <div class="about_inner">
+                <div class="left wow fadeInLeft">
+
+                    <div class="image parallax" data-relative-input="true"
+                        style="transform: translate3d(0px, 0px, 0px);transform-style: preserve-3d;backface-visibility: hidden;">
+                        <img src="https://marketifythemes.net/html/grax/img/placeholders/3-4.jpg" alt="">
+                        <div class="main layer" data-img-url="https://marketifythemes.net/html/grax/img/about/1.jpg"
+                            data-depth="0.04"
+                            style="background-image: url(&quot;https://marketifythemes.net/html/grax/img/about/1.jpg&quot;); transform: translate3d(-7.48963px, 2.94716px, 0px); transform-style: preserve-3d; backface-visibility: hidden; position: relative; display: block; left: 0px; top: 0px;">
                         </div>
-
                     </div>
 
-                    <div class="right wow fadeInLeft">
-                        <div class="abe_title">
-                            <h3>A propos de <span>moi</span></h3>
-                        </div>
-                        <div class="text">
-                            <p>Hello! I'm Alan Walker. I'm a web developer, and I'm very passionate and dedicated to my
-                                work. With 20 years experience as a professional web developer, I have acquired the
-                                skills and knowledge necessary to make your project a success. I enjoy every step of the
-                                design process, from discussion and collaboration.Hello! I'm Alan Walker. I'm a web
-                                developer, and I'm very passionate and dedicated to my
-                                work. With 20 years experience as a professional web developer, I have acquired the
-                                skills and knowledge necessary to make your project a success. I enjoy every step of the
-                                design process, from discussion and collaboration.</p>
-                        </div>
-                        <div class="abe_button">
-                            <a href="#contact">Contactez moi</a>
-                        </div>
+                </div>
+
+                <div class="right wow fadeInLeft">
+                    <div class="abe_title">
+                        <h3>A propos de <span>moi</span></h3>
+                    </div>
+                    <div class="text">
+                        <p>Hello! I'm Alan Walker. I'm a web developer, and I'm very passionate and dedicated to my
+                            work. With 20 years experience as a professional web developer, I have acquired the
+                            skills and knowledge necessary to make your project a success. I enjoy every step of the
+                            design process, from discussion and collaboration.Hello! I'm Alan Walker. I'm a web
+                            developer, and I'm very passionate and dedicated to my
+                            work. With 20 years experience as a professional web developer, I have acquired the
+                            skills and knowledge necessary to make your project a success. I enjoy every step of the
+                            design process, from discussion and collaboration.</p>
+                    </div>
+                    <div class="abe_button">
+                        <a href="#contact">Contactez moi</a>
                     </div>
                 </div>
             </div>
@@ -209,42 +172,33 @@
     </div>
 
 
-
-    <div class="section">
-        <div class="contact" id="contact">
-            <div class="contact_content">
-                <div class="contact_title">
-                    <h3>Contactez Moi</h3>
-                </div>
-                <p class="contact_sub_title">Un petit message pour en savoir plus ?</p>
-                <form id="form2" method="post" action="form.php" class="contact_form">
-                    <div class="contact_form_div">
-                        <label for="nomform" class="contact_form_tag">Nom</label>
-                        <input name="nom" id="nomform" type="text" placeholder='Votre nom' class="contact_form_input"
-                            required>
-                    </div>
-
-                    <div class="contact_form_div">
-                        <label for="prenomform" class="contact_form_tag">Mail</label>
-                        <input name="mail" type="email" placeholder="Votre mail" class="contact_form_input"
-                            id="prenomform" required>
-                    </div>
-
-                    <div class="contact_form_div contact_form_area">
-                        <label for="textarea1" class="contact_form_tag">Message</label>
-                        <textarea name="commentaire" id="textarea1" cols="30" rows="10" placeholder="Votre message"
-                            class="contact_form_input" required></textarea>
-                    </div>
-
-                    <input type="submit" class="button form-control submit submit_button" value="Envoyer">
-                </form>
+    <div class="container section contact" id="contact">
+        <div class="contact_title">
+            <h3>Contactez Moi</h3>
+        </div>
+        <p class="contact_sub_title">Un petit message pour en savoir plus ?</p>
+        <form id="form2" method="post" action="form.php" class="contact_form">
+            <div class="contact_form_div">
+                <label for="nomform" class="contact_form_tag">Nom</label>
+                <input name="nom" id="nomform" type="text" placeholder='Votre nom' class="contact_form_input" required>
             </div>
 
-        </div>
-    </div>
+            <div class="contact_form_div">
+                <label for="prenomform" class="contact_form_tag">Mail</label>
+                <input name="mail" type="email" placeholder="Votre mail" class="contact_form_input" id="prenomform"
+                    required>
+            </div>
+
+            <div class="contact_form_div contact_form_area">
+                <label for="textarea1" class="contact_form_tag">Message</label>
+                <textarea name="commentaire" id="textarea1" cols="30" rows="10" placeholder="Votre message"
+                    class="contact_form_input" required></textarea>
+            </div>
+
+            <input type="submit" class="button form-control submit submit_button" value="Envoyer">
+        </form>
     </div>
 
-    <!-- <img src="https://www.melaniedev.com/image/waves2.png" class="waves"> -->
     <footer>
         <div class="footer_container container">
             <a href="#home" class="footer_title">by Abdalla.</a>
@@ -270,9 +224,47 @@
     <div class="mouse-cursor cursor-outer" style="visibility: visible; transform: translate(847px, 35px);"></div>
     <div class="mouse-cursor cursor-inner" style="visibility: visible; transform: translate(847px, 35px);"></div>
 
-
+    <!-- <script src="scrollreveal.min.js"></script>
+    <script src="mixitup.min.js"></script> -->
     <script src="js/script.js"></script>
 
 </body>
 
 </html>
+
+<!-- <div class="preloader">
+        <div class="loader">
+            <div class="ytp-spinner">
+                <div class="ytp-spinner-container">
+                    <div class="ytp-spinner-rotator">
+                        <div class="ytp-spinner-left">
+                            <div class="ytp-spinner-circle"></div>
+                        </div>
+                        <div class="ytp-spinner-right">
+                            <div class="ytp-spinner-circle"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+<!-- <div class="top_bar">
+        <div class="container">
+            <div class="top_bar_inner">
+                <div class="logo">
+                    <a href="#home">PORTFOLIO</a>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li class="current"><a href="#home">Accueil</a></li>
+                        <li><a href="#about">A propos</a></li>
+                        <li><a href="#projects">Projets</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+<!-- <img src="https://www.melaniedev.com/image/waves2.png" class="waves"> -->
