--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
 
     <title>Freelancer - CV and Portfolio Template</title>
-    <meta name="description" content>
+    <meta name="description" content />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png"> -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link
         href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+        rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/unicons.css">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
     <header class="header" id="header">
         <div class="nav_menu">
             <ul class="nav_list">
-
                 <li class="nav_item">
                     <a href="#home" class="nav_link active-link">
                         <i class="bx bx-home"></i>
@@ -50,19 +51,14 @@
                         <i class="bx bx-message-square-detail"></i>
                     </a>
                 </li>
-
             </ul>
         </div>
     </header>
 
-
     <div class="section home" id="home">
-        <div class="ripple jquery-ripples" id="ripple">
-            <!-- <canvas width="1098" height="754" style="position: absolute;inset: 0px;z-index: -1;"></canvas> -->
-        </div>
-        <div class="container water">
+        <div class="container">
             <div class="details" data-animation="toRight">
-                <div class="name-section">
+                <div class="name_section">
                     <h3 class="fn_animation name ready">
                         <span class="word">
                             <span class="character opened">A</span>
@@ -90,13 +86,13 @@
                         </span>
                     </h3>
                 </div>
-                <div class="job-section">
+                <div class="job_section">
                     <span class="fn_animation job ready">
                         <span class="word">
                             <span class="character opened">D</span>
                             <span class="character opened">é</span>
                             <span class="character opened">v</span>
-                            <span class="character opened">o</span>
+                            <span class="character opened">e</span>
                             <span class="character opened">l</span>
                             <span class="character opened">o</span>
                             <span class="character opened">p</span>
@@ -111,42 +107,61 @@
                         </span> -->
                         <!-- <span class="character opened">&nbsp;</span> -->
                         <span class="word">
-                            <span class="character opened">f</span>
-                            <span class="character opened">u</span>
-                            <span class="character opened">l</span>
-                            <span class="character opened">l</span>
-                            <span class="character opened">s</span>
-                            <span class="character opened">t</span>
-                            <span class="character opened">a</span>
-                            <span class="character opened">c</span>
-                            <span class="character opened">k</span>
+                            <span class="character opened">w</span>
+                            <span class="character opened">e</span>
+                            <span class="character opened">b</span>
                         </span>
+                        <!-- <span class="character opened">&nbsp;</span>
+                        <svg class="symfony_icon" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 128 128"><path d="M81.1 102.1c-5 0-8.4 3.6-8.4 8.6c0 4.7 3.4 8.6 8.4 8.6c4.9 0 8.3-3.9 8.3-8.6c0-5-3.3-8.6-8.3-8.6m0 14.7c-3.6 0-5.1-3.2-5.1-6.1c0-3.1 1.9-6.1 5.1-6.1s5.1 3 5.1 6.1c0 2.9-1.6 6.1-5.1 6.1M65 101.2v.8h-4v1.7c0 .7.7 1.2 1.4 1.2H65v14h1.6c.7 0 1.4-.7 1.4-1.3V105h3c.7 0 1-.7 1-1.4V102h-4v-1.1c0-2.2.3-3.9 2.9-3.9h.1c.7.1 1.3-.5 1.4-1.3l.1-1c-.6-.1-1.2-.2-2-.2c-4.5.1-5.5 2.7-5.5 6.7m-32.9 1v.1c-.6 0-1.3.5-1.5 1.1L26.4 116h-.1l-4.1-12.5c-.3-.6-.9-1.3-1.5-1.3v-.2h-2.1l5.6 15.5c.2.5.6 1.5.6 1.9c0 .3-.9 4.1-3.6 4.1H21c-.7 0-1.2.5-1.3 1.2l-.1 1.1c.5.1 1.1.2 2.1.2c4 0 5.2-3.9 6.3-7l6-17h-1.9zm-19.2 3.6c-2.5-1.3-5.2-2.1-5.3-4.7c0-2.7 2.5-3.4 4.4-3.4c.8 0 1.5.1 2.2.2s1.3-.5 1.4-1.2l.1-1c-1.3-.3-2.6-.5-3.7-.5c-4.2 0-7.3 2.1-7.3 6.2c0 3.5 2.4 4.9 4.9 6.1s5.3 2.2 5.3 5.1c0 3-2.9 4.2-5 4.2c-1.2 0-2.5-.3-3.5-.6c-.7-.1-1.2.5-1.3 1.3l-.1.8c1.5.5 3 .8 4.5.8c4.7 0 8.4-1.8 8.4-6.7c-.1-3.8-2.5-5.3-5-6.6m41.4-3.7c-1.5 0-4 .8-5.1 3.2c-.9-2.2-2.8-3.1-4.7-3.1c-2.4 0-4.1.8-5.2 2.8H39v-1.2c0-.7-.5-1.6-1.3-1.6l.1-.2H36v17h2c.8 0 1.2-.7 1.2-1.4l-.2-.1v-6.8c0-3.1 1.6-6.1 4.7-6.1c2.4 0 3.3 2.5 3.3 4.6v9.9h1.3c.7 0 1.7-.7 1.7-1.4v-7c0-3.1 1.1-6.1 4.2-6.1c2.4 0 2.8 2.5 2.8 4.6v9.9h1.6c.7 0 1.4-.6 1.4-1.2v-9.4c0-3.7-1.5-6.4-5.7-6.4m46.4-.1c-2.3 0-4.6 1-5.5 3H95v-1.2c0-.8-.6-1.6-1.4-1.6v-.2H92v17h1.8c.7 0 1.2-.7 1.2-1.4v-6.3c0-4 1.8-6.8 5.3-6.8c2.6.2 3.7 2 3.7 5.8v8.6h1.3c.7 0 1.7-.7 1.7-1.4v-8.4c0-4.4-2.1-7.1-6.3-7.1m20.9 0v.3c-.6 0-1.3.5-1.5 1.1l-4.2 12.6h-.1l-4.1-12.5c-.3-.6-.9-1.3-1.5-1.3v-.2h-2.1l5.6 15.5c.2.5.6 1.5.6 1.9c0 .3-.9 4.1-3.6 4.1h-.2c-.7 0-1.2.5-1.3 1.2l-.1 1.1c.5.1 1.1.2 2.1.2c4 0 5.2-3.9 6.3-7l6-17zM64 90.2c24.6 0 44.6-20 44.6-44.6S88.6 1 64 1S19.4 21 19.4 45.6s20 44.6 44.6 44.6M34.4 48.8c.7-2.2 2.4-2.6 4.2-2.1c1.8.6 2.6 2.8 2 4.5q-.15.3-.3.9l-.8 1.4c-.4 1.4 1.4 2.3 2.7 2.7c2.9.9 5.7-.6 6.4-3c.7-2.2-.7-3.7-1.3-4.2l-2.7-2.9c-1.3-1.4-4-5.3-2.7-9.7c.5-1.7 1.6-3.5 3.2-4.7c3.3-2.5 7-2.9 10.4-1.9c4.5 1.3 6.6 4.3 9.4 6.5c1.6-4.6 3.7-9.1 7-12.9c2.9-3.5 6.9-5.9 11.4-6.1c4.5-.1 7.9 1.9 8.1 5.1c0 1.4-.7 4.1-3.5 4.2c-2.1.1-3.5-1.2-3.6-3c0-.7.2-1.3.6-2c.5-.9.6-1 .5-1.4c0-1.2-1.8-1.2-2.3-1.2c-6.7.2-8.5 9.3-9.9 16.6l-.7 3.9c3.9.6 6.6-.1 8.1-1.1c2.1-1.4-.6-2.8-.3-4.4c.4-1.6 1.8-2.4 3-2.4c1.6 0 2.8 1.7 2.8 3.4c-.1 2.8-3.8 6.8-11.4 6.6c-.9 0-1.8-.1-2.6-.2L71 49.3c-1.3 6-3 14.1-9 21.2c-5.2 6.2-10.5 7.2-12.9 7.2c-4.4.1-7.4-2.2-7.5-5.4c-.1-3.1 2.6-4.7 4.4-4.8c2.4-.1 4 1.6 4.1 3.6c.1 1.7-.8 2.2-1.4 2.5c-.4.3-1 .6-.9 1.3c0 .3.3 1 1.3.9c1.9-.1 3.1-1 4-1.6c4.3-3.6 6-9.9 8.2-21.3l.5-2.8c.7-3.7 1.6-7.8 2.8-12c-3-2.3-4.9-5.1-9-6.2c-2.8-.8-4.5-.1-5.7 1.4c-1.4 1.8-1 4.1.4 5.5l2.3 2.5c2.8 3.2 4.3 5.7 3.7 9.1c-.9 5.4-7.3 9.5-14.9 7.2c-6.6-1.7-7.8-6.3-7-8.8"/></svg> -->
+                        <span class="character opened">&nbsp;</span>
+                        <span class="word">
+                            <span class="character opened">e</span>
+                            <span class="character opened">t</span>
+                        </span>
+                        <span class="character opened">&nbsp;</span>
+                        <span class="word">
+                            <span class="character opened">m</span>
+                            <span class="character opened">o</span>
+                            <span class="character opened">b</span>
+                            <span class="character opened">i</span>
+                            <span class="character opened">l</span>
+                            <span class="character opened">e</span>
+                        </span>
+                        <!-- <span class="character opened">&nbsp;</span>
+                        <svg class="flutter_icon" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>flutter</title> <path d="M18.909 14.84l-8.086 8.070 8.085 8.085h9.214l-8.073-8.083 8.073-8.073h-9.212zM18.892 1.004l-15.013 14.996 4.624 4.624 19.599-19.603h-9.194z"></path> </g></svg> -->
                     </span>
                 </div>
-            </div>
-            <div class="grax_tm_down opened" data-skin="light">
-                <div class="line_wrapper">
-                    <div class="line"></div>
+                <div class="action_section">
+                    <a href="assets/cv.pdf" download class="action_outline_btn">Télécharger CV</a>
+                    <a href="#about" class="action_btn">A propos de moi</a>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="social_network">
+            <div class="social_network_item">
+                <a href="" class="social_network_link" target="_blank">
+                    <i class="bx bxl-linkedin"></i>
+                </a>
+            </div>
+            <div class="social_network_item">
+                <a href="" class="social_network_link" target="_blank">
+                    <i class="bx bxl-github"></i>
+                </a>
+            </div>
+        </div>
+        <div class="scroll_down">
+            <a href="#about" class="scroll_link">
+                <i class="bx bx-mouse"></i> <span>Scroll Down</span>
+            </a>
+        </div>
 
+    </div>
 
     <div class="section about" id="about">
         <div class="container">
             <div class="about_inner">
                 <div class="left wow fadeInLeft">
-
-                    <div class="image parallax" data-relative-input="true"
-                        style="transform: translate3d(0px, 0px, 0px);transform-style: preserve-3d;backface-visibility: hidden;">
-                        <img src="https://marketifythemes.net/html/grax/img/placeholders/3-4.jpg" alt="">
-                        <div class="main layer" data-img-url="https://marketifythemes.net/html/grax/img/about/1.jpg"
-                            data-depth="0.04"
-                            style="background-image: url(&quot;https://marketifythemes.net/html/grax/img/about/1.jpg&quot;); transform: translate3d(-7.48963px, 2.94716px, 0px); transform-style: preserve-3d; backface-visibility: hidden; position: relative; display: block; left: 0px; top: 0px;">
-                        </div>
-                    </div>
-
+                    <img src="/assets/about_me.jpg" alt="about_me_img" class="about_me_img">
                 </div>
 
                 <div class="right wow fadeInLeft">
@@ -154,19 +169,109 @@
                         <h3>A propos de <span>moi</span></h3>
                     </div>
                     <div class="text">
-                        <p>Hello! I'm Alan Walker. I'm a web developer, and I'm very passionate and dedicated to my
-                            work. With 20 years experience as a professional web developer, I have acquired the
-                            skills and knowledge necessary to make your project a success. I enjoy every step of the
-                            design process, from discussion and collaboration.Hello! I'm Alan Walker. I'm a web
-                            developer, and I'm very passionate and dedicated to my
-                            work. With 20 years experience as a professional web developer, I have acquired the
-                            skills and knowledge necessary to make your project a success. I enjoy every step of the
-                            design process, from discussion and collaboration.</p>
+                        <p>
+                            Hello! I'm Alan Walker. I'm a web developer, and I'm very
+                            passionate and dedicated to my work. With 20 years experience as
+                            a professional web developer, I have acquired the skills and
+                            knowledge necessary to make your project a success. I enjoy
+                            every step of the design process, from discussion and
+                            collaboration.Hello! I'm Alan Walker. I'm a web developer, and
+                            I'm very passionate and dedicated to my work. With 20 years
+                            experience as a professional web developer, I have acquired the
+                            skills and knowledge necessary to make your project a success. I
+                            enjoy every step of the design process, from discussion and
+                            collaboration.
+                        </p>
                     </div>
-                    <div class="abe_button">
-                        <a href="#contact">Contactez moi</a>
-                    </div>
+                    <a href="#contact" class="action_btn">Contactez moi</a>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="container section" id="skills">
+        <div class="skills_title">
+            <h3>Mes compténces</h3>
+        </div>
+        <div class="skills">
+            <div class="skill_card">
+                <div class="skill_card_content">
+                    <img class="icon_img" src="assets/flutter_icon.png" alt="">
+                    <h3>Flutter</h3>
+                    <p>Expert en Flutter pour le développement rapide d'applications mobiles cross-platform. Utilisé
+                        pour
+                        créer
+                        des interfaces utilisateur fluides et réactives, adaptées à la fois pour iOS et Android.</p>
+                </div>
+                <div class="skill_card_bottom">
+                    <span class="badge">Expert</span>
+                </div>
+            </div>
+
+            <div class="skill_card">
+                <div class="skill_card_content">
+                    <i class="fab fa-php fa-2x"></i>
+                    <h3>Symfony</h3>
+                    <p>Utilisation avancée de Symfony pour développer des applications web robustes, sécurisées et
+                        évolutives, avec une forte emphase sur la réutilisabilité des composants.</p>
+                </div>
+                <div class="skill_card_bottom">
+                    <span class="badge">Avancé</span>
+                </div>
+            </div>
+
+            <div class="skill_card">
+                <div class="skill_card_content">
+                    <i class="fab fa-node-js fa-2x"></i>
+                    <h3>Node.js</h3>
+                    <p>Conception de services back-end avec Node.js pour des applications nécessitant de hautes
+                        performances
+                        en
+                        temps réel et une grande scalabilité.</p>
+                </div>
+                <div class="skill_card_bottom">
+                    <span class="badge">Intermédiaire</span>
+                </div>
+            </div>
+
+            <div class="skill_card">
+                <div class="skill_card_content">
+                    <i class="fas fa-database fa-2x"></i>
+                    <h3>MySQL & MongoDB</h3>
+                    <p>Expertise en bases de données relationnelles et NoSQL.</p>
+                </div>
+                <div class="skill_card_bottom">
+                    <span class="badge">Expert</span>
+                </div>
+            </div>
+
+            <div class="skill_card">
+                <div class="skill_card_content">
+                    <i class="fas fa-cogs fa-2x"></i>
+                    <h3>CI/CD & GitHub Actions</h3>
+                    <p>Utilisation de techniques de CI/CD avec GitHub Actions pour automatiser les tests et les
+                        déploiements,
+                        augmentant la productivité et la fiabilité des applications.</p>
+                </div>
+                <div class="skill_card_bottom">
+                    <span class="badge">Avancé</span>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+    <div class="available">
+        <div class="container">
+            <div class="available_title">
+                <h3>Disponible pour des projets</h3>
+            </div>
+            <div class="available_text">
+                <p>Je suis disponible pour des projets de développement web et mobile. Si vous avez un projet en tête ou
+                    besoin
+                    d'aide pour un projet existant, n'hésitez pas à me contacter.</p>
+            </div>
+            <div class="available_button">
+                <a href="#contact">Contactez moi</a>
             </div>
         </div>
     </div>
@@ -180,13 +285,14 @@
         <form id="form2" method="post" action="form.php" class="contact_form">
             <div class="contact_form_div">
                 <label for="nomform" class="contact_form_tag">Nom</label>
-                <input name="nom" id="nomform" type="text" placeholder='Votre nom' class="contact_form_input" required>
+                <input name="nom" id="nomform" type="text" placeholder="Votre nom" class="contact_form_input"
+                    required />
             </div>
 
             <div class="contact_form_div">
                 <label for="prenomform" class="contact_form_tag">Mail</label>
                 <input name="mail" type="email" placeholder="Votre mail" class="contact_form_input" id="prenomform"
-                    required>
+                    required />
             </div>
 
             <div class="contact_form_div contact_form_area">
@@ -195,7 +301,7 @@
                     class="contact_form_input" required></textarea>
             </div>
 
-            <input type="submit" class="button form-control submit submit_button" value="Envoyer">
+            <input type="submit" class="button form-control submit submit_button" value="Envoyer" />
         </form>
     </div>
 
@@ -213,21 +319,31 @@
                 </li>
             </ul>
 
-
-
             <span class="footer_copy">
                 &#169; abdalla-dev.com. All rights reserved
             </span>
         </div>
     </footer>
 
-    <div class="mouse-cursor cursor-outer" style="visibility: visible; transform: translate(847px, 35px);"></div>
-    <div class="mouse-cursor cursor-inner" style="visibility: visible; transform: translate(847px, 35px);"></div>
+    <!-- <div class="mouse-cursor cursor-outer" style="visibility: visible; transform: translate(847px, 35px)"></div>
+    <div class="mouse-cursor cursor-inner" style="visibility: visible; transform: translate(847px, 35px)"></div> -->
 
-    <!-- <script src="scrollreveal.min.js"></script>
-    <script src="mixitup.min.js"></script> -->
+    <!-- <div class="mouse-cursor cursor-outer"></div>
+    <div class="mouse-cursor cursor-inner"></div> -->
+
+    <!-- <div class="progressbar">
+        <a href="#"><span class="text">To Top</span></a>
+        <span class="line"></span>
+    </div> -->
+
+    <div class="progress-wrap">
+        <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+        </svg>
+    </div>
+
+    <script src="https://res.cloudinary.com/veseylab/raw/upload/v1684982764/magicmouse-2.0.0.cdn.min.js"></script>
     <script src="js/script.js"></script>
-
 </body>
 
 </html>
