--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     </span>
                 </div>
                 <div class="action_section">
-                    <a href="assets/cv.pdf" download class="action_outline_btn">Télécharger CV</a>
-                    <a href="#about" class="action_btn">A propos de moi</a>
+                    <a href="assets/cv.pdf" download class="action_outline_btn magic-hover">Télécharger CV</a>
+                    <a href="#about" class="action_btn magic-hover">A propos de moi</a>
                 </div>
             </div>
         </div>
@@ -183,7 +183,7 @@
                             collaboration.
                         </p>
                     </div>
-                    <a href="#contact" class="action_btn">Contactez moi</a>
+                    <a href="#contact" class="action_btn magic-hover">Contactez moi</a>
                 </div>
             </div>
         </div>
@@ -301,7 +301,7 @@
                     class="contact_form_input" required></textarea>
             </div>
 
-            <input type="submit" class="button form-control submit submit_button" value="Envoyer" />
+            <input type="submit" class="button form-control submit submit_button magic-hover" value="Envoyer" />
         </form>
     </div>
 
