--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/unicons.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/unicons.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -149,19 +149,18 @@
                 </a>
             </div>
         </div>
-        <div class="scroll_down">
+        <div class="scroll_down magic-hover">
             <a href="#about" class="scroll_link">
                 <i class="bx bx-mouse"></i> <span>Scroll Down</span>
             </a>
         </div>
-
     </div>
 
     <div class="section about" id="about">
         <div class="container">
             <div class="about_inner">
                 <div class="left wow fadeInLeft">
-                    <img src="/assets/about_me.jpg" alt="about_me_img" class="about_me_img">
+                    <img src="/assets/about_me_2.jpeg" alt="about_me_img" class="about_me_img" />
                 </div>
 
                 <div class="right wow fadeInLeft">
@@ -170,17 +169,19 @@
                     </div>
                     <div class="text">
                         <p>
-                            Hello! I'm Alan Walker. I'm a web developer, and I'm very
-                            passionate and dedicated to my work. With 20 years experience as
-                            a professional web developer, I have acquired the skills and
-                            knowledge necessary to make your project a success. I enjoy
-                            every step of the design process, from discussion and
-                            collaboration.Hello! I'm Alan Walker. I'm a web developer, and
-                            I'm very passionate and dedicated to my work. With 20 years
-                            experience as a professional web developer, I have acquired the
-                            skills and knowledge necessary to make your project a success. I
-                            enjoy every step of the design process, from discussion and
-                            collaboration.
+                            Fort de plusieurs années d'expérience dans le développement web
+                            et mobile, je suis passionné par la création de solutions
+                            numériques qui améliorent l'expérience utilisateur.
+
+                            <br>
+                            Spécialiste
+                            en développement front-end et back-end, je maîtrise diverses
+                            technologies telles que HTML, CSS, JavaScript, ainsi que des
+                            frameworks comme Symfony pour le web et <span class="word_flutter">Flutter</span> pour les
+                            applications mobiles. Je m'engage à fournir des applications
+                            performantes et esthétiques, en veillant à optimiser chaque
+                            aspect de l'expérience utilisateur pour répondre aux besoins
+                            spécifiques de mes clients.
                         </p>
                     </div>
                     <a href="#contact" class="action_btn magic-hover">Contactez moi</a>
@@ -266,16 +267,17 @@
                 <h3>Disponible pour des projets</h3>
             </div>
             <div class="available_text">
-                <p>Je suis disponible pour des projets de développement web et mobile. Si vous avez un projet en tête ou
-                    besoin
-                    d'aide pour un projet existant, n'hésitez pas à me contacter.</p>
+                <p>
+                    Je suis disponible pour des projets de développement web et mobile.
+                    Si vous avez un projet en tête ou besoin d'aide pour un projet
+                    existant, n'hésitez pas à me contacter.
+                </p>
             </div>
             <div class="available_button">
                 <a href="#contact">Contactez moi</a>
             </div>
         </div>
     </div>
-
 
     <div class="container section contact" id="contact">
         <div class="contact_title">
