--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
             </div>
         </div>
         <div class="social_network">
-            <div class="social_network_item">
+            <div class="social_network_item magic-hover">
                 <a href="" class="social_network_link" target="_blank">
                     <i class="bx bxl-linkedin"></i>
                 </a>
             </div>
-            <div class="social_network_item">
+            <div class="social_network_item magic-hover">
                 <a href="" class="social_network_link" target="_blank">
                     <i class="bx bxl-github"></i>
                 </a>
@@ -273,7 +273,7 @@
                     existant, n'hésitez pas à me contacter.
                 </p>
             </div>
-            <div class="available_button">
+            <div class="available_button magic-hover">
                 <a href="#contact">Contactez moi</a>
             </div>
         </div>
@@ -309,15 +309,15 @@
 
     <footer>
         <div class="footer_container container">
-            <a href="#home" class="footer_title">by Abdalla.</a>
+            <a href="#home" class="footer_title magic-hover">by Abdalla.</a>
 
             <ul class="footer_list">
                 <li>
-                    <a href="#about" class="footer_link">A propos</a>
+                    <a href="#about" class="footer_link magic-hover">A propos</a>
                 </li>
 
                 <li>
-                    <a href="#work" class="footer_link">Portfolio</a>
+                    <a href="#work" class="footer_link magic-hover">Portfolio</a>
                 </li>
             </ul>
 
@@ -338,7 +338,7 @@
         <span class="line"></span>
     </div> -->
 
-    <div class="progress-wrap">
+    <div class="progress-wrap magic-hover">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
             <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
         </svg>
